Make use of <meta http-equiv="content-language"> and stop setting content-language based on user prefs for accept-language.  Bug 246454, patch by Martijn Wargers <m.wargers@hccnet.nl>, r+sr=bzbarsky.