content/base/src/nsContentSink.cpp
@@ -291,6 +291,7 @@ nsContentSink::ProcessHTTPHeaders(nsIChannel* aChannel)
     "link",
     "default-style",
     "content-style-type",
+    "content-language",
     // add more http headers if you need
     // XXXbz don't add content-location support without reading bug
     // 238654 and its dependencies/dups first.
